--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Using webpack with react",
   "scripts": {
-    "dev": "grunt watch & nodemon app"
+    "dev": "grunt & nodemon app"
   },
   "dependencies": {
     "body-parser": "^1.6.5",
@@ -22,6 +22,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-react": "^0.9.0",
     "grunt-webpack": "^1.0.8",
+    "jsx-loader": "^0.12.2",
     "nodemon": "^1.2.1",
     "webpack": "^1.3.7",
     "webpack-dev-server": "^1.5.0"
