--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "type": "git",
     "url": "https://github.com/tutorialhorizon/react-tagged-input.git"
   },
+  "browserify": {
+    "transform": ["reactify"]
+  },
   "dependencies": {
     "react": "^0.12.1"
   },
