--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "browserify": {
     "transform": ["reactify"]
   },
-  "dependencies": {
-    "react": "^0.12.1"
+  "peerDependencies": {
+    "react": ">=0.12.1 <0.13"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -30,6 +30,7 @@
     "grunt-react": "^0.9.0",
     "grunt-webpack": "^1.0.8",
     "jsx-loader": "^0.12.2",
+    "react": ">=0.12.1 <0.13",
     "webpack": "^1.4.13",
     "webpack-dev-server": "^1.6.6"
   }
