--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "author": "Tutorialhorizon team",
   "version": "0.0.13",
   "description": "A custom input field to enter tags",
-  "scripts": {},
-  "main": "./src/TaggedInput.jsx",
+  "scripts": {
+    "dev": "grunt dev",
+    "build": "grunt build"
+  },
+  "main": "./dist/TaggedInput.js",
   "keywords": [
     "react",
     "react-component",
@@ -27,10 +30,11 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-react": "^0.9.0",
+    "grunt-react": "^0.12.2",
     "grunt-webpack": "^1.0.8",
     "jsx-loader": "^0.12.2",
     "react": ">=0.12.1 <0.14",
+    "react-tools": "^0.13.3",
     "webpack": "^1.4.13",
     "webpack-dev-server": "^1.6.6"
   }
