--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "mocha": "^2.2.5",
     "node-libs-browser": "^0.5.2",
     "react": ">=0.12.1 <0.14",
+    "sinon": "^1.15.4",
+    "sinon-chai": "^2.8.0",
     "webpack": "^1.4.13",
     "webpack-dev-server": "^1.6.6"
   }
